added further rsocket logic

--- a/chess-backend/src/main/resources/application.yml
+++ b/chess-backend/src/main/resources/application.yml
@@ -48,3 +48,7 @@ mongo:
   db:
     user: ${MONGO_DB_USER}
     password: ${MONGO_DB_PASSWORD}
+
+rsocket-chess-engine:
+  host: ${RSOCKET_CHESS_ENGINE_HOST}
+  port: ${RSOCKET_CHESS_ENGINE_PORT}
